--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
 			<version>16.0.2</version>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.10.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
