--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
 	<url>https://github.com/valery1707/junit4-rule</url>
 	<inceptionYear>2018</inceptionYear>
 
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://opensource.org/licenses/MIT</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
 	<scm>
 		<url>https://github.com/valery1707/junit4-rule</url>
 		<connection>scm:git:https://github.com/valery1707/junit4-rule</connection>
