Build: Check code in PR with SputnikCI

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ jdk:
 
 script:
   - mvn clean verify
+
+after_success:
+  - python <(curl -s https://raw.githubusercontent.com/TouK/sputnik-ci/master/sputnik-ci.py)
