--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>name.valery1707.junit</groupId>
 	<artifactId>junit4-rule</artifactId>
-	<version>0.1.1-SNAPSHOT</version>
+	<version>0.1.1</version>
 
 	<name>Extension library for JUnit 4</name>
 	<description>
