--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ script:
 
 after_success:
   - python <(curl -s https://raw.githubusercontent.com/TouK/sputnik-ci/master/sputnik-ci.py)
+  - bash <(curl -s https://codecov.io/bash)
